--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 body {
     margin: 0;
     padding: 0;
@@ -31,6 +32,9 @@ video {
     align-items: center;
     flex-grow: 1;
     display: flex;
+    border: 5;
+    border-radius: 5;
+    border-color: #1c1c1c;
 }
 
 .controls {
