--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
 
     <div class="main">
         <div class="sub">
-            <div class="participants-videos col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div id="video-grid"></div>
+            <div class="participants-videos">
+                <div id="video-grid col-xl-4 col-lg-4 col-md-6 col-sm-12"></div>
             </div>
             <div class="controls">
-                <div class="block">
+                <div class="block ">
                     <div onclick="muteUnmute()" class="button mute-button">
                         <i class="fas fa-microphone"></i>
                         <span>Mute</span>
@@ -35,15 +35,15 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="button">
-                        <span class="leave-meeting"><b>Leave Meeting</b></span>
+                    <div class="button leave-meeting">
+                        <span onclick=""><b>Leave Classroom</b></span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="chat-body">
             <div class="header">
-                <p></p>
+                <br>
                 <h6>Chat</h6>
             </div>
             <div class="chat-display">
