--- a/views/style.css
+++ b/views/style.css
@@ -27,27 +27,29 @@ video {
 }
 
 .participants-videos {
-    background-color: #000000;
+    background-color: #ffffff;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
     display: flex;
     border: 5;
-    border-radius: 5;
-    border-color: #1c1c1c;
+    border-radius: 2;
+    border-color: #e6e6e6;
 }
 
 .controls {
-    background-color: #1c1c1c;
-    color: #ffffff;
+    background-color: #e6e6e6;
+    color: #8b8b8b;
     display: flex;
     padding: 5px;
     justify-content: space-between;
+    box-shadow: black 1px 7px 20px;
 }
 
 .block {
     display: flex;
 }
+
 .button {
     display: flex;
     flex-direction: column;
@@ -63,24 +65,25 @@ video {
 }
 
 .button:hover {
-    background-color: #303030;
-    border-radius: 4px;
+    background-color: #8b8b8b;
+    color: white;
+    border-radius: 10px;
 }
 
 .leave-meeting {
-    color: #b90000;
+    color: #8b8b8b;
 }
 
 .chat-body {
     flex: 0.4;
     display: flex;
     flex-direction: column;
-    background-color: #242324;
-    border-left: 1px solid #3d3d42;
+    background-color: #ffffff;
+    border-left: 5px solid #e6e6e6;
 }
 
 .header {
-    color: #f5f5f5;
+    color: #8b8b8b;
     text-align: center;
 }
 
@@ -98,11 +101,11 @@ video {
     flex-grow: 1;
     background-color: transparent;
     border: none;
-    color: #f5f5f5;
+    color: #3a3a3a;
 }
 
 .messages {
-    color: #ffffff;
+    color: #838383;
     list-style: none;
 }
 
