--- a/public/style.css
+++ b/public/style.css
@@ -69,10 +69,10 @@ video {
     color: white;
     border-radius: 10px;
 }
-
+/* 
 .leave-meeting {
     color: #8b8b8b;
-}
+} */
 
 .chat-body {
     flex: 0.4;
