--- a/public/index.ejs
+++ b/public/index.ejs
@@ -21,10 +21,10 @@
     <div class="main">
         <div class="sub">
             <div class="participants-videos">
-                <div id="video-grid col-xl-4 col-lg-4 col-md-6 col-sm-12"></div>
+                <div id="video-grid" class="col-xl-4 col-lg-4 col-md-6 col-sm-12"></div>
             </div>
             <div class="controls">
-                <div class="block ">
+                <div class="block">
                     <div onclick="muteUnmute()" class="button mute-button">
                         <i class="fas fa-microphone"></i>
                         <span>Mute</span>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="button leave-meeting">
+                    <div class="button">
                         <span onclick=""><b>Leave Classroom</b></span>
                     </div>
                 </div>
